removed date from notation

--- a/wiki-app/app/articles/components/article-edit/article-edit.component.html
+++ b/wiki-app/app/articles/components/article-edit/article-edit.component.html
@@ -9,7 +9,7 @@
                title="Название статьи"
                placeholder="Название статьи"
                required
-               [(ngModel)]="article.title"
+               [(ngModel)]="userArticle.title"
                (blur)="handleArticleChanges()"
                (keyup)="handleArticleChanges()"
                (paste)="handleArticleChanges()"
@@ -21,7 +21,7 @@
                   (paste)="handleArticleChanges()"
                   (cut)="handleArticleChanges()"
                   (keyup)="handleArticleChanges()"
-                  [(ngModel)]="article.content"></textarea>
+                  [(ngModel)]="userArticle.content"></textarea>
       </md-input-container>
     </md-tab>
     <md-tab label="Мета информация">
@@ -29,7 +29,7 @@
         <input mdInput
                title="Игрок белыми"
                placeholder="Игрок белыми"
-               [(ngModel)]="boardBox.notation.whitePlayer"
+               [(ngModel)]="userBoardBox.notation.whitePlayer"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
@@ -39,7 +39,7 @@
         <input mdInput
                title="Игрок чёрными"
                placeholder="Игрок чёрными"
-               [(ngModel)]="boardBox.notation.blackPlayer"
+               [(ngModel)]="userBoardBox.notation.blackPlayer"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
@@ -49,7 +49,7 @@
         <input mdInput
                title="Событие"
                placeholder="Событие"
-               [(ngModel)]="boardBox.notation.event"
+               [(ngModel)]="userBoardBox.notation.event"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
@@ -59,7 +59,7 @@
         <input mdInput
                title="Место"
                placeholder="Место"
-               [(ngModel)]="boardBox.notation.site"
+               [(ngModel)]="userBoardBox.notation.site"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
@@ -69,27 +69,32 @@
         <input mdInput
                title="Раунд"
                placeholder="Раунд"
-               [(ngModel)]="boardBox.notation.round"
+               [(ngModel)]="userBoardBox.notation.round"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
         >
       </md-input-container>
-      <md-input-container class="full-width">
-        <input mdInput
-               title="Дата"
-               placeholder="Дата"
-               [(ngModel)]="boardBox.notation.date"
-               (blur)="handleBoardBoxChanges()"
-               (keyup)="handleBoardBoxChanges()"
-               (paste)="handleBoardBoxChanges()"
-        >
-      </md-input-container>
+      <!--<md-input-container class="full-width">-->
+        <!--<input mdInput-->
+               <!--[mdDatepicker]="picker"-->
+               <!--title="Дата (дд/мм/гггг)"-->
+               <!--placeholder="Дата (дд/мм/гггг)"-->
+               <!--[(ngModel)]="userBoardBox.notation.date"-->
+               <!--(blur)="handleBoardBoxChanges()"-->
+               <!--(keyup)="handleBoardBoxChanges()"-->
+               <!--(paste)="handleBoardBoxChanges()"-->
+        <!--&gt;-->
+        <!--<button mdSuffix [mdDatepickerToggle]="picker"></button>-->
+        <!--<md-datepicker #picker-->
+                       <!--(selectedChanged)="handleDateChange($event)"-->
+        <!--&gt;</md-datepicker>-->
+      <!--</md-input-container>-->
       <md-input-container class="full-width">
         <input mdInput
                title="Результат"
                placeholder="Результат"
-               [(ngModel)]="boardBox.notation.result"
+               [(ngModel)]="userBoardBox.notation.result"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
@@ -99,7 +104,7 @@
         <input mdInput
                title="Тип игры"
                placeholder="Тип игры"
-               [(ngModel)]="boardBox.notation.gameType"
+               [(ngModel)]="userBoardBox.notation.gameType"
                (blur)="handleBoardBoxChanges()"
                (keyup)="handleBoardBoxChanges()"
                (paste)="handleBoardBoxChanges()"
